# CipherAuditPlatform

./: Dockerfile  README.md  main.py  pyproject.toml
cap/: __init__.py  cipherspec.py  fault_characterization.py  fault_simulation.py  test_cipherspec.py  test_fault_characterization.py  utils.py
cipherscore/: __init__.py  cipherspec.py  test_cipherspec.py
docs/: Readme.md
specifications/: AES_128.bcs  AES_128.csl  ASCON128.csl  CHACHA20.csl  CLEFIA_128.csl  PRESENT_80.csl  SPECK_128.csl  Trivium.csl
zeroisation/: README_iitm.md
zeroisation/gnuzero/: .gitignore  CMakeLists.txt  scrub.h  test.c
zeroisation/gnuzero/inc/: attribute.h  plugin-init.h  sm_scrub.h  utils.h
zeroisation/gnuzero/scripts/: cmake.sh  copy_analyzer_header.sh  env.sh  update-alternatives.sh
zeroisation/gnuzero/src/: attribute.cc  plugin_init.cc  sm_scrub.cc  utils.cc
zeroisation/gnuzero/test/: scrub.h
zeroisation/gnuzero/test/interprocedural/memset/: memset.c  memset_conditional_leak.c  memset_stack.c
zeroisation/gnuzero/test/interprocedural/stack/: clean.c  clean_on_callee_stack.c  clean_on_callee_stack_array_assignment.c  conditional_leak.c  init_call.c  leak.c  leak_on_callee_stack.c  leak_on_callee_stack_array.c
zeroisation/gnuzero/test/interprocedural/structure/: init_call.c
zeroisation/gnuzero/test/intraprocedural/attributes/: scrub_attr_local.c  scrub_attr_param.c  scrubber_attr.c  stack_scrubber_attr.c
zeroisation/gnuzero/test/intraprocedural/memcpy/: memcpy_leak_from_heap_to_stack.c  memcpy_leak_from_stack_to_heap.c  memcpy_leak_heap.c  memcpy_leak_stack.c
zeroisation/gnuzero/test/intraprocedural/memset/: memset.c  memset_conditional_leak.c  memset_stack.c
zeroisation/gnuzero/test/intraprocedural/realloc/: realloc_as_free_leak.c  realloc_as_free_no_leak.c  realloc_full_leak.c  realloc_on_move_leak.c  realloc_partial_leak.c
zeroisation/gnuzero/test/intraprocedural/scrubber/: scrubber_def.c  scrubber_ext.c  scrubber_with_leak.c
zeroisation/gnuzero/test/intraprocedural/stack/: clean.c  leak.c  leak_mod1.c
zeroisation/gnuzero/test/intraprocedural/structure/: inner_heap.c
zeroisation/gnuzero/test/real_world/libsodium/: stream_ref.c  stream_ref.c_not_optimized.sarif  stream_ref.c_not_optimized_full_prop.sarif  stream_ref.c_optimized_with_O1.sarif
zeroisation/gnuzero/test/real_world/linux_crypto/des/: des.c  des.c-dkey-_not_optimized.sarif  des.c-dkey-_optimized_with_O1.sarif
zeroisation/gnuzero/test/real_world/linux_crypto/tea/: tea.c  tea.c_not_optimized.sarif  tea.c_optimized_with_O1.sarif  tea.c_optimized_with_O2.sarif  tea.c_optimized_with_O3.sarif
zeroisation/gnuzero/test/real_world/wpa_supplicant/: wpa_supplicant.c  wpa_supplicant.c_not_optimized.sarif  wpa_supplicant.c_optimized_with_O1.sarif
zeroisation/gnuzero/test/signals/: signal1  signal1.c  signal2  signal2.c  signal3  signal3.c  signal4  signal4.c
zeroisation/juliet-testsuite-adapted/: py_common.py  run_scrub_analysis.py
zeroisation/juliet-testsuite-adapted/testcases/CWE226_Sensitive_Information_Uncleared_Before_Release/: CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_01.c  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_01.c.sarif  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_02.c  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_02.c.sarif  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_03.c  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_03.c.sarif  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_04.c  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_04.c.sarif  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_05.c  CWE226_Sensitive_Information_Uncleared_Before_Release__w32_char_alloca_05.c.sarif  (+134 more)
zeroisation/juliet-testsuite-adapted/testcasesupport/: scrub.h  std_testcase.h
(+144 files in other folders)
