[project]
name = "cipher-audit-platform"
version = "0.1.0"
description = "Tool for auditing Block Cipher implementations for points vulnerable to fault injection attacks, and to also quantize the exploitability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyparsing>=3.2.3",
]

[tool.setuptools.packages.find]
include = ["cap*"]
exclude = ["zeroisation*", "specifications*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
